--- a/Zeitgeist.Web/Views/Account/Register.cshtml
+++ b/Zeitgeist.Web/Views/Account/Register.cshtml
@@ -1,4 +1,5 @@
-﻿@model Zeitgeist.Web.Models.RegisterModel
+﻿@using Zeitgeist.Web.Tools
+@model Zeitgeist.Web.Models.RegisterModel
 @{
     ViewBag.Title = "Register";
 }
@@ -47,14 +48,14 @@
         </div>
     </div><!-- /.widget-body -->
 </div><!-- /.signup-box -->
-
-<script>
+@Html.Script(
+@<script>
     $(function() {
         zg.AjaxForm('#register-form', "/Account/Register", function (result) {
             alert("vea " + result.redirect);
             window.location = result.redirect;
         });
     });
-</script>
+</script>)
 
 
