--- a/Zeitgeist.Web/Views/Shared/_LayoutLogin.cshtml
+++ b/Zeitgeist.Web/Views/Shared/_LayoutLogin.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using Zeitgeist.Web.Tools
+@{
     Layout = null;
 }
 <!DOCTYPE html>
@@ -18,15 +19,18 @@
             </div>
         </div>
     </div>
+    @Html.Partial("_ScriptsFooter")
+    @Html.RenderScripts()
     <script type="text/javascript">
-	jQuery(function($) {
-		$(document).on('click', '.toolbar a[data-target]', function(e) {
-			e.preventDefault();
-			var target = $(this).data('target');
-			$('.widget-box.visible').removeClass('visible');//hide others
-			$(target).addClass('visible');//show target
-		});
-	});
+        jQuery(function ($) {
+            $(document).on('click', '.toolbar a[data-target]', function (e) {
+                e.preventDefault();
+                var target = $(this).data('target');
+                $('.widget-box.visible').removeClass('visible');//hide others
+                $(target).addClass('visible');//show target
+            });
+        });
     </script>
+
 </body>
 </html>
