se crea work context que contiene el perfil del usuario, se crea las tablas de settings, para añadir a cada usuario su liga por defecto, el campo LeagueId del perfil del usuario ya esta disponible para su uso

--- a/Zeitgeist.Web/Views/Home/_leagueNavBar.cshtml
+++ b/Zeitgeist.Web/Views/Home/_leagueNavBar.cshtml
@@ -15,7 +15,7 @@
         @foreach (var a in Model.Leagues)
         {
             <li>
-                <a href="#">
+                <a href="@Url.Action("ChangeLeague","Home",new RouteValueDictionary(){{"id",a.IdLeague}})">
                     <div class="clearfix">
                         <span class="pull-left">@a.Name</span>
                         <span class="pull-right">65%</span>
