--- a/Zeitgeist.Web/Views/Shared/_ScriptsFooter.cshtml
+++ b/Zeitgeist.Web/Views/Shared/_ScriptsFooter.cshtml
@@ -1,7 +1,13 @@
 ﻿<script src="~/bundles/jquery"></script>
-@*<script src="~/Scripts/bootstrap.min.js"></script>*@
-<script src="~/bundles/chameleon-bootstrapjs"></script>
+@*<script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/bundles/jqueryval"></script>
+*@
 @*<script src="~/bundles/jqueryval"></script>*@
+<script src="~/Scripts/jquery.validate.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
+<script src="~/Scripts/bootstrap.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.bootstrap.js"></script>
+@*<script src="~/bundles/chameleon-bootstrapjs"></script>*@
 <script src="~/Content/theme/js/date-time/bootstrap-datepicker.min.js"></script>
 <script src="~/Content/theme/js/x-editable/bootstrap-editable.min.js"></script>
 @*<script src="~/bundles/themejs"></script>*@
